feat: reusable DTO for repositories
